group 'onlinemarket'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'mysql:mysql-connector-java:5.1.31'
    compile 'org.hibernate:hibernate-core:5.2.16.Final'
}
